<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGunsList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/M642_gun"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gun_1"
            android:background="@drawable/rounded_button"
            android:textColor="@color/Button_text_color"/>

        <Button
            android:id="@+id/MK14_gun"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gun_2"
            android:background="@drawable/rounded_button"
            android:textColor="@color/Button_text_color"/>

        <Button
            android:id="@+id/BM4_gun"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gun_3"
            android:background="@drawable/rounded_button"
            android:textColor="@color/Button_text_color"/>

    </LinearLayout>

</LinearLayout>